link add in social networks

--- a/index.html
+++ b/index.html
@@ -312,22 +312,25 @@
                 </div>
             </div>
             <div class="bottom-footer">
-            <p>Наши социальные сети</p>
-            <ul>
-                <li>
-                    <a href="#"><img src="images/free-icon-facebook-1384053 1.svg" alt=""></a>
-                </li>
-                <li>
-                    <a href="#"><img src="images/free-icon-instagram-2111463 1.svg" alt=""></a>
-                </li>
-                <li>
-                    <a href="#"><img src="images/free-icon-telegram-2111646 1.svg" alt=""></a>
-                </li>
-                <li>
-                    <a href="#"><img src="images/free-icon-youtube-1384060 1.svg" alt=""></a>
-                </li>
-            </ul>
-        </div>
+                <p>Наши социальные сети</p>
+                <ul>
+                    <li>
+                        <a href="https://facebook.com/javohirveb" target="_blank"><img src="images/free-icon-facebook-1384053 1.svg" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="https://instagram.com/javohirveb" target="_blank"><img src="images/free-icon-instagram-2111463 1.svg" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/javohirveb" target="_blank"><img src="images/Octocat.png" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="https://t.me/Javohir_Toxtasinov" target="_blank"><img src="images/free-icon-telegram-2111646 1.svg" alt=""></a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/channel/UCNDuwCIhVAWk0gHLneR2qtQ" target="_blank"><img src="images/free-icon-youtube-1384060 1.svg" alt=""></a>
+                    </li>
+                </ul>
+            </div>
         </div>
         
     </footer>
